# fish-language

./: Projekt wstępny.docx
TKOM-Fish/: CMakeLists.txt  file.ebnf  main.cpp  quickTestMain.cpp
TKOM-Fish/examples/: example1  example2  example3  example4  example5
TKOM-Fish/include/: Context.h  Controller.h  ProgramOptions.h  Source.h  Src.h  Test.h
TKOM-Fish/include/Analizator/: EndOfFileException.h  Lexer.h  Parser.h  Symbol.h  SymbolType.h
TKOM-Fish/include/Analizator/Interpreter/: BreakException.h  ContinueException.h  EndOfFileException.h  Env.h  FunctionScope.h  GlobalEnv.h  GlobalScope.h  Identifier.h  Interpreter.h  Lib.h  NotImplementedException.h  Obj.h  Object.h  ObjectType.h  ReturnException.h  Symbol.h  SymbolNotFoundException.h  TokenDeleter.h
TKOM-Fish/include/Analizator/Lexer/: Lexer.h  LexerState.h  TerminalToken.h  Token.h  TokenType.h
TKOM-Fish/include/Analizator/Nodes/: AddExpression.h  AddOperator.h  AliasStatement.h  AndExpression.h  Argument.h  ArgumentList.h  ArithmeticExpression.h  AssignOperator.h  AssignStatement.h  BlockInstruction.h  ClassDefinition.h  ClassStatement.h  ConditionalExpression.h  ControlStatement.h  DeleteStatement.h  Expression.h  File.h  ForStatement.h  ForeachStatement.h  ForiStatement.h  FunctionCall.h  FunctionDefinition.h  IfStatement.h  ImportStatement.h  MemberDefinition.h  MethodCall.h  MultiplyExpression.h  MultiplyOperator.h  NewStatement.h  OrExpression.h  Parameter.h  ParameterList.h  Property.h  PropertyAssignment.h  RelativeExpression.h  RelativeOperator.h  Statement.h  Term.h  WhileStatement.h
TKOM-Fish/include/Analizator/Parser/: LanguageParser.h  Parser.h  ParsingError.h  Repeat.h  Rule.h  Symbol.h  SymbolOld.h  SymbolType.h  SymbolTypeOld.h
TKOM-Fish/include/Analizator/Symbols/: AddExpression.h  AddOperator.h  AliasStatement.h  AndExpression.h  Argument.h  ArgumentList.h  ArithmeticExpression.h  ArraySubscript.h  AssignExpression.h  AssignOperator.h  AssignStatement.h  BlockInstruction.h  Bool.h  ClassBody.h  ClassBodyStatement.h  ClassDefinition.h  CompoundStatement.h  ConditionalExpression.h  ControlStatement.h  Default.h  DeleteStatement.h  Expression.h  ExpressionStatement.h  File.h  FilePart.h  ForStatement.h  ForeachStatement.h  ForiStatement.h  FunctionCall.h  FunctionDefinition.h  IfStatement.h  ImportStatement.h  MemberDefinition.h  MultiplyExpression.h  MultiplyOperator.h  NewExpression.h  NewStatement.h  OrExpression.h  Parameter.h  ParameterList.h  (+10 more)
TKOM-Fish/include/Analizator/Tokens/: Identifier.h  Token.h  TokenDeleter.h  TokenType.h
TKOM-Fish/include/Exceptions/: LengthException.h  SecondPointException.h  UnknownSignException.h
TKOM-Fish/include/Sources/: CommandLineSource.h  FileSource.h  Source.h
TKOM-Fish/source/: Context.cpp  Controller.cpp  ProgramOptions.cpp  Source.cpp  Src.cpp
TKOM-Fish/source/Analizator/: EndOfFileException.cpp  Lexer.cpp  Parser.cpp  Symbol.cpp
TKOM-Fish/source/Analizator/Exceptions/: LengthException.cpp  SecondPointException.cpp  UnknownSignException.cpp
TKOM-Fish/source/Analizator/Interpreter/: BreakException.cpp  ContinueException.cpp  EndOfFileException.cpp  Env.cpp  (+11 more)
TKOM-Fish/source/ProgramOptions/: ProgramOptions.cpp
TKOM-Fish/source/Sources/: CommandLineSource.cpp  FileSource.cpp
TKOM-Fish/source/Tests/: Test.cpp  test.cpp
(+219 files in other folders)
